--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -20,8 +20,9 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
         pip install wheel
+        copy C:\Program Files (x86)\Windows Kits\8.1\bin\x86\rc.exe C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\bin\rc.exe
+        copy C:\Program Files (x86)\Windows Kits\8.1\bin\x86\rcdll.dll C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\bin\rcdll.dll
     - name: Compile source code
       run: |
         python setup.py build
